# ipif-hub

./: .flake8  .gitignore  EXPERIMENT.py  Pipfile  README.md  SAMPLE_DATA.json  TODO.todo  VIECPRO.json  pyproject.toml  pytest.ini  start-server.sh  test.py  test_json_schema.py  validate_json_schema.py
.devcontainer/: devcontainer.json
djangobaseproject/: celery.py  settings.py  urls.py
ipif_hub/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  problem.sql  search.py  search_indexes.py  serializers.py  tasks.py  urls.py  views.py
ipif_hub/migrations/: 0001_initial.py  0002_auto_20220330_1025.py  0002_auto_20220816_1351.py  0002_auto_20220921_0946.py  0002_person_pre_serialized.py  0002_rename_statement_factoid_statements.py  0003_alter_person_pre_serialized.py  0003_auto_20220330_1031.py  0004_auto_20220319_0952.py  0004_auto_20220330_1121.py  0005_alter_factoid_statement.py  0005_ipifrepo_ids_are_local.py  0006_auto_20220329_1452.py  0006_ipifrepo_endpoint_name.py  0007_rename_endpoint_url_ipifrepo_endpoint_uri.py  0008_remove_ipifrepo_ids_are_local.py  0009_auto_20220615_1343.py  0010_auto_20220622_0818.py  0011_auto_20220622_0821.py  0012_auto_20220623_1347.py  0013_auto_20220629_0815.py  0014_auto_20220629_0918.py  0015_auto_20220629_0954.py  0016_auto_20220629_1131.py  0017_auto_20220728_1233.py  0018_ingestionjob.py  0019_alter_ingestionjob_start_datetime.py  0020_alter_ingestionjob_id.py  0021_auto_20220805_1010.py  0022_rename_complete_ingestionjob_is_complete.py  0023_auto_20220805_1057.py  0024_alter_ingestionjob_job_status.py  0025_alter_ipifrepo_endpoint_slug.py  0026_auto_20220808_0846.py  0027_alter_ipifrepo_endpoint_is_ipif.py  0028_alter_ipifrepo_endpoint_slug.py  0029_alter_ipifrepo_endpoint_slug.py
ipif_hub/signals/: handler_utils.py  handlers.py  signal_processor.py
ipif_hub/tests/: conftest.py  test_api_uris.py  (+7 more)
solr/: docker-compose.yml
webpage/: metadata.py  tests.py
(+32 files in other folders)
