[tool.poetry]
name = "ipif-hub"
version = "0.1.0"
description = ""
authors = ["Richard Hadden <richard.hadden@oeaw.ac.at>"]

[tool.poetry.dependencies]
python = "^3.10"
acdh-django-browsing = "1.0.0"
Django = ">=3.2,<4"
requests = ">=2.25"
django-haystack = "^3.1.1"
pysolr = "^3.9.0"
djangorestframework = "^3.13.1"
python-dateutil = "^2.8.2"
celery = "^5.2.3"
redis = "^4.2.0"
psycopg2-binary = "^2.9.3"
django-email-verification = "^0.2.2"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
